<resources>
    <string name="app_name">EyeRestReminderApp</string>
    <string name="how_long_do_you_stare_at_a_screen">How long do you stare at a screen?</string>
    <string name="how_long_do_you_want_to_rest_your_eyes">How long do you want to rest your eyes?</string>
    <string name="enter_the_value_in_minutes">Enter the value in minutes.</string>
    <string name="enter_the_value_in_seconds">Enter the value in seconds.</string>
    <string name="set_values">Set Values</string>
    <string name="channel_name">Reminders to rest your eyes.</string>
    <string name="channel_description">Notify user about eye rest time.\t</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="tv_main_time_left">%1$s\n %2$d</string>
    <string name="working">Working</string>
    <string name="resting">Resting</string>
</resources>